updated docker compose

--- a/.env-sample
+++ b/.env-sample
@@ -11,3 +11,6 @@ PHP_CONTAINER_NAME=glass-php
 
 # See https://hub.docker.com/r/nanoninja/php-fpm/tags/
 PHP_VERSION=7.4.10
+
+# Localhost port
+PORT=4610
